--- a/templates/categories.html
+++ b/templates/categories.html
@@ -3,148 +3,176 @@
 <html>
 
 <head>
-  <!--Import Google Icon Font-->
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <!--Import materialize.css-->
-  <link type="text/css" rel="stylesheet" href="{% static 'css/materialize.min.css' %}" media="screen,projection" />
-  <link type="text/css" rel="stylesheet" href="{% static 'css/main.css' %}" />
-
-  <!--Let browser know website is optimized for mobile-->
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Categories Page</title>
+    <!--Import Google Icon Font-->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <!--Import materialize.css-->
+    <link type="text/css" rel="stylesheet" href="{% static 'css/materialize.min.css' %}" media="screen,projection" />
+    <link type="text/css" rel="stylesheet" href="{% static 'css/main.css' %}" />
+    <!--Let browser know website is optimized for mobile-->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Categories Page</title>
 </head>
 
 <body class="grey lighten-4">
-  <nav class="blue darken-2">
-    <div class="container">
-      <div class="nav-wrapper">
-        <a href="{% url 'home' %}" class="brand-logo">Madmin</a>
-        <a href="#" data-activates="side-nav" class="button-collapse show-on-large right">
-          <i class="material-icons">menu</i>
-        </a>
-        <ul class="right hide-on-med-and-down">
-          <li>
-            <a href="{% url 'home' %}">Dashboard</a>
-          </li>
-          <li>
-            <a href="{% url 'posts' %}">Posts</a>
-          </li>
-          <li class="active">
-            <a href="{% url 'categories' %}">Categories</a>
-          </li>
-          <li>
-            <a href="{% url 'comments' %}">Comments</a>
-          </li>
-          <li>
-            <a href="{% url 'register' %}">Users</a>
-          </li>
-        </ul>
-        <!-- Side nav -->
-          {% include 'navbar.html' %}
-
-  <!-- Section: Categories -->
-  <section class="section section-categories grey lighten-4">
-    <div class="container">
-      <div class="row">
-        <div class="col s12">
-          <div class="card">
-            <div class="card-content">
-              <span class="card-title">Categories</span>
-              <table class="striped">
-                <thead>
-                  <tr>
-                    <th>Title</th>
-                    <th>Date Created</th>
-                    <th></th>
-                  </tr>
-                </thead>
-                <tbody>
-                  {% for category in categories %}
-                  <tr>
-                    <td>{{category.title}}</td>
-                    <td>{{category.date}}</td>
-                    <td>
-                    </td>
-                  </tr>
-                  {% endfor %}
-                </tbody>
-              </table>
+    <nav class="blue darken-2">
+        <div class="container">
+            <div class="nav-wrapper">
+                <a href="{% url 'home' %}" class="brand-logo">Madmin</a>
+                <a href="#" data-activates="side-nav" class="button-collapse show-on-large right">
+                    <i class="material-icons">menu</i>
+                </a>
+                <ul class="right hide-on-med-and-down">
+                    <li>
+                        <a href="{% url 'home' %}">Dashboard</a>
+                    </li>
+                    <li>
+                        <a href="{% url 'posts' %}">Posts</a>
+                    </li>
+                    <li class="active">
+                        <a href="{% url 'categories' %}">Categories</a>
+                    </li>
+                    <li>
+                        <a href="{% url 'comments' %}">Comments</a>
+                    </li>
+                    <li>
+                        <a href="{% url 'register' %}">Users</a>
+                    </li>
+                </ul>
+                <!-- Side nav -->
+                {% include 'navbar.html' %}
+                <!-- Section: Categories -->
+                <section class="section section-categories grey lighten-4">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col s12">
+                                <div class="card">
+                                    <div class="card-content">
+                                        <span class="card-title">Categories</span>
+                                        <table class="striped">
+                                            <thead>
+                                                <tr>
+                                                    <th>Title</th>
+                                                    <th>Date Created</th>
+                                                    <th></th>
+                                                </tr>
+                                            </thead>
+                                            <tbody>
+                                                {% for category in categories %}
+                                                <tr>
+                                                    <td>{{category.title}}</td>
+                                                    <td>{{category.date}}</td>
+                                                    <td>
+                                                    </td>
+                                                </tr>
+                                                {% endfor %}
+                                            </tbody>
+                                        </table>
+                                    </div>
+                                    <div class="card-action">
+                                        <ul class="pagination">
+                                            <span class="step-links">
+                                                {% if categories.has_previous %}
+                                                <a class="blue-text" href="?page={{ categories.previous_page_number }}"><i class="material-icons"></i>previous</a>
+                                                {% endif %}
+                                                <span class="current">
+                                                    <li class="waves-effect">
+                                                        <a href="{{ categories.number }}" class="blue-text"></a>
+                                                    </li>
+                                                </span>
+                                                {% if categories.has_next %}
+                                                <a class="blue-text" href="?page={{ categories.next_page_number }}">
+                                                    <i class="material-icons"></i>next</a>
+                                                {% endif %}
+                                            </span>
+                                            <li class="waves-effect">
+                                    </div>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
             </div>
-  
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
+            </section>
+            <!-- Footer -->
+            <footer class="section blue darken-2 white-text center">
+                <p>Madmin Panel Copyright &copy; 2018</p>
+            </footer>
+            <!-- Fixed Action Button -->
+            <div class="fixed-action-btn">
+                <a href="#category-modal" class="modal-trigger btn-floating btn-large red">
+                    <i class="material-icons">add</i>
+                </a>
+            </div>
+            <!-- Add Category Modal -->
+            <div id="category-modal" class="modal">
+                <div class="modal-content">
+                    <h4>Add Category</h4>
+                    <form id="add_title" method="POST">{% csrf_token %}
+                        <div class="input-field">
+                            <input type="text" id="title" name="title">
+                            <label for="title">Title</label>
+                        </div>
+                        <input type="submit" value="Submit" name="submit" class="btn btn-large btn-extended grey lighten-4 black-text" />
+                    </form>
+                </div>
+                <!-- Preloader -->
+                <div class="loader preloader-wrapper big active">
+                    <div class="spinner-layer spinner-blue-only">
+                        <div class="circle-clipper left">
+                            <div class="circle"></div>
+                        </div>
+                        <div class="gap-patch">
+                            <div class="circle"></div>
+                        </div>
+                        <div class="circle-clipper right">
+                            <div class="circle"></div>
+                        </div>
+                    </div>
+                </div>
+                <!--Import jQuery before materialize.js-->
+                 <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+                <script type="text/javascript" src="{% static 'js/materialize.min.js' %}"></script>
+                <script>
+                // Hide Sections
+                $('.section').hide();
 
-  <!-- Footer -->
-  <footer class="section blue darken-2 white-text center">
-    <p>Madmin Panel Copyright &copy; 2018</p>
-  </footer>
+                $("#add_title").submit(function(e) {
+                    e.preventDefault();
+                    $.ajax({
+                        url: "{% url 'categories' %}",
+                        type: "POST",
+                        dataType: "text",
+                        data: {
+                            "title": $("#title").val(),
+                            csrfmiddlewaretoken: $("input[name=csrfmiddlewaretoken]").val(),
+                        },
 
-  <!-- Fixed Action Button -->
-  <div class="fixed-action-btn">
-    <a href="#category-modal" class="modal-trigger btn-floating btn-large red">
-      <i class="material-icons">add</i>
-    </a>
-  </div>
+                        success: function(response) {
+                            alert("successfully saved");
+                        }
 
-  <!-- Add Category Modal -->
-  <div id="category-modal" class="modal">
-    <div class="modal-content">
-      <h4>Add Category</h4>
-      <form>
-        <div class="input-field">
-          <input type="text" id="title" name="title">
-          <label for="title">Title</label>
-        </div>
-      </form>
-      <div class="modal-footer">
-        <a href="#!" class="modal-action modal-close btn blue white-text">Submit</a>
-      </div>
-    </div>
-  </div>
 
-  <!-- Preloader -->
-  <div class="loader preloader-wrapper big active">
-    <div class="spinner-layer spinner-blue-only">
-      <div class="circle-clipper left">
-        <div class="circle"></div>
-      </div>
-      <div class="gap-patch">
-        <div class="circle"></div>
-      </div>
-      <div class="circle-clipper right">
-        <div class="circle"></div>
-      </div>
-    </div>
-  </div>
+                    });
 
-  <!--Import jQuery before materialize.js-->
-  <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-  <script type="text/javascript" src="{% static 'js/materialize.min.js' %}"></script>
+                });
 
-  <script>
-    // Hide Sections
-    $('.section').hide();
+                setTimeout(function() {
+                    $(document).ready(function() {
+                        // Show sections
+                        $('.section').fadeIn();
 
-    setTimeout(function () {
-      $(document).ready(function () {
-        // Show sections
-        $('.section').fadeIn();
+                        // Hide preloader
+                        $('.loader').fadeOut();
 
-        // Hide preloader
-        $('.loader').fadeOut();
+                        //Init Side nav
+                        $('.button-collapse').sideNav();
 
-        //Init Side nav
-        $('.button-collapse').sideNav();
+                        // Init Modal
+                        $('.modal').modal();
 
-        // Init Modal
-        $('.modal').modal();
-
-      });
-    }, 1000);
-  </script>
+                    });
+                }, 1000);
+                </script>
 </body>
 
 </html>
