--- a/templates/index.html
+++ b/templates/index.html
@@ -72,7 +72,7 @@
           <div class="card-panel center">
             <i class="material-icons medium">mode_edit</i>
             <h5>Blog Posts</h5>
-            <h3 class="count">105</h3>
+            <h3 class="count">{{posts}}</h3>
             <div class="progress grey lighten-1">
               <div class="determinate blue lighten-1" style="width: 20%"></div>
             </div>
