--- a/templates/posts.html
+++ b/templates/posts.html
@@ -120,7 +120,7 @@
                             <label for="date">Date</label>
                         </div>
                         <div class="input-field">
-                            <select name="category">
+                            <select name="category" id="category">
                                 <option value="" disabled selected>Select option</option>
                                 <option value="Web Development">Web Development</option>
                                 <option value="Graphic Design">Graphic Design</option>
