comment post added

--- a/templates/index.html
+++ b/templates/index.html
@@ -82,7 +82,7 @@
           <div class="card-panel blue lighten-1 white-text center">
             <i class="material-icons medium">mode_comment</i>
             <h5>Comments</h5>
-            <h3 class="count">1200</h3>
+            <h3 class="count">{{comments}}</h3>
             <div class="progress grey lighten-1">
               <div class="determinate white" style="width: 40%"></div>
             </div>
@@ -288,8 +288,8 @@
     <!--Import jQuery before materialize.js-->
    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script type="text/javascript" src="{% static 'js/materialize.min.js' %}"></script>
-   <script src="https://cdnjs.cloudflare.com/ajax/libs/canvasjs/1.7.0/canvasjs.min.js" integrity="sha512-FJ2OYvUIXUqCcPf1stu+oTBlhn54W0UisZB/TNrZaVMHHhYvLBV9jMbvJYtvDe5x/WVaoXZ6KB+Uqe5hT2vlyA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdn.ckeditor.com/4.8.0/standard/ckeditor.js"></script>
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/canvasjs/1.7.0/canvasjs.min.js" integrity="sha512-FJ2OYvUIXUqCcPf1stu+oTBlhn54W0UisZB/TNrZaVMHHhYvLBV9jMbvJYtvDe5x/WVaoXZ6KB+Uqe5hT2vlyA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="{% static 'js/chart.js' %}"></script>
 
     <script>
