--- a/templates/comments.html
+++ b/templates/comments.html
@@ -3,193 +3,162 @@
 <html>
 
 <head>
-  <!--Import Google Icon Font-->
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <!--Import materialize.css-->
-  <link type="text/css" rel="stylesheet" href="{% static 'css/materialize.min.css' %}" media="screen,projection" />
-  <link type="text/css" rel="stylesheet" href="{% static 'css/main.css' %}" />
-
-  <!--Let browser know website is optimized for mobile-->
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Comments Page</title>
+    <!--Import Google Icon Font-->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <!--Import materialize.css-->
+    <link type="text/css" rel="stylesheet" href="{% static 'css/materialize.min.css' %}" media="screen,projection" />
+    <link type="text/css" rel="stylesheet" href="{% static 'css/main.css' %}" />
+    <!--Let browser know website is optimized for mobile-->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Comments Page</title>
 </head>
 
 <body class="grey lighten-4">
-  <nav class="blue darken-2">
-    <div class="container">
-      <div class="nav-wrapper">
-        <a href="{% url 'home' %}" class="brand-logo">Madmin</a>
-        <a href="#" data-activates="side-nav" class="button-collapse show-on-large right">
-          <i class="material-icons">menu</i>
-        </a>
-        <ul class="right hide-on-med-and-down">
-          <li>
-            <a href="{% url 'home' %}">Dashboard</a>
-          </li>
-          <li>
-            <a href="{% url 'posts' %}">Posts</a>
-          </li>
-          <li>
-            <a href="{% url 'categories' %}">Categories</a>
-          </li>
-          <li class="active">
-            <a href="{% url 'comments' %}">Comments</a>
-          </li>
-          <li>
-            <a href="{% url 'register' %}">Users</a>
-          </li>
-        </ul>
-        <!-- Side nav -->
-          {% include 'navbar.html' %}
-  <!-- Section: Comments -->
-  <section class="section section-comments grey lighten-4">
-    <div class="container">
-      <div class="row">
-        <div class="col s12">
-          <div class="card">
-            <div class="card-content">
-              <span class="card-title">Comments</span>
-              <table class="striped">
-                <tbody>
-                  <tr>
-                    <td width="70">
-                      <img src="{% static 'img/person1.jpg' %}" alt="" class="responsive-img circle" style="width: 40px;margin-left:10px;">
-                    </td>
-                    <td>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolore, nostrum!</td>
-                    <td>
-                      <a href="#!" class="green-text">
-                        <i class="material-icons">done</i>
-                      </a>
-                      <a href="#!" class="red-text">
-                        <i class="material-icons">close</i>
-                      </a>
-                    </td>
-                  </tr>
-                  <tr>
-                    <td width="70">
-                      <img src="{% static 'img/person2.jpg' %}" alt="" class="responsive-img circle" style="width: 40px;margin-left:10px;">
-                    </td>
-                    <td>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolore, nostrum!</td>
-                    <td>
-                      <a href="#!" class="green-text">
-                        <i class="material-icons">done</i>
-                      </a>
-                      <a href="#!" class="red-text">
-                        <i class="material-icons">close</i>
-                      </a>
-                    </td>
-                  </tr>
-                  <tr>
-                    <td width="70">
-                      <img src="{% static 'img/person3.jpg' %}" alt="" class="responsive-img circle" style="width: 40px;margin-left:10px;">
-                    </td>
-                    <td>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolore, nostrum!</td>
-                    <td>
-                      <a href="#!" class="green-text">
-                        <i class="material-icons">done</i>
-                      </a>
-                      <a href="#!" class="red-text">
-                        <i class="material-icons">close</i>
-                      </a>
-                    </td>
-                  </tr>
-                  <tr>
-                    <td width="70">
-                      <img src="{% static 'img/person4.jpg' %}" alt="" class="responsive-img circle" style="width: 40px;margin-left:10px;">
-                    </td>
-                    <td>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolore, nostrum!</td>
-                    <td>
-                      <a href="#!" class="green-text">
-                        <i class="material-icons">done</i>
-                      </a>
-                      <a href="#!" class="red-text">
-                        <i class="material-icons">close</i>
-                      </a>
-                    </td>
-                  </tr>
-                </tbody>
-              </table>
-            </div>
-            <div class="card-action">
-              <ul class="pagination">
-                <li class="disabled">
-                  <a href="#!" class="blue-text">
-                    <i class="material-icons">chevron_left</i>
-                  </a>
-                </li>
-                <li class="active blue lighten-2">
-                  <a href="#!" class="white-text">1</a>
-                </li>
-                <li class="waves-effect">
-                  <a href="#!" class="blue-text">2</a>
-                </li>
-                <li class="waves-effect">
-                  <a href="#!" class="blue-text">3</a>
-                </li>
-                <li class="waves-effect">
-                  <a href="#!" class="blue-text">4</a>
-                </li>
-                <li class="waves-effect">
-                  <a href="#!" class="blue-text">5</a>
-                </li>
-                <li class="waves-effect">
-                  <a href="#!" class="blue-text">
-                    <i class="material-icons">chevron_right</i>
-                  </a>
-                </li>
-              </ul>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
+    <nav class="blue darken-2">
+        <div class="container">
+            <div class="nav-wrapper">
+                <a href="{% url 'home' %}" class="brand-logo">Madmin</a>
+                <a href="#" data-activates="side-nav" class="button-collapse show-on-large right">
+                    <i class="material-icons">menu</i>
+                </a>
+                <ul class="right hide-on-med-and-down">
+                    <li>
+                        <a href="{% url 'home' %}">Dashboard</a>
+                    </li>
+                    <li>
+                        <a href="{% url 'posts' %}">Posts</a>
+                    </li>
+                    <li>
+                        <a href="{% url 'categories' %}">Categories</a>
+                    </li>
+                    <li class="active">
+                        <a href="{% url 'comments' %}">Comments</a>
+                    </li>
+                    <li>
+                        <a href="{% url 'register' %}">Users</a>
+                    </li>
+                </ul>
+                <!-- Side nav -->
+                {% include 'navbar.html' %}
+                <!-- Section: Comments -->
+                <section class="section section-comments grey lighten-4">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col s12">
+                                <div class="card">
+                                    <div class="card-content">
+                                        <span class="card-title">Comments</span>
+                                        <table class="striped">
+                                            {% for comment in comments %}
+                                            <tbody>
+                                                <tr>
+                                                    <td width="70">
+                                                        <img src="{% static 'img/person1.jpg' %}" alt="" class="responsive-img circle" style="width: 40px;margin-left:10px;">
+                                                    </td>
+                                                    <td>{{comment.body}}</td>
+                                                    <td>
+                                                       
+                                                    </td>
+                                                </tr>
+                                            </tbody>
+                                            {% endfor %}
+                                        </table>
+                                    </div>
+                                    <div class="card-action">
+                                        <ul class="pagination">
+                                            <span class="step-links">
+                                                {% if comments.has_previous %}
+                                                <a class="blue-text" href="?page={{ comments.previous_page_number }}"><i class="material-icons"></i>previous</a>
+                                                {% endif %}
+                                                <span class="current">
+                                                    <li class="waves-effect">
+                                                        <a href="{{ comments.number }}" class="blue-text"></a>
+                                                    </li>
+                                                </span>
+                                                {% if comments.has_next %}
+                                                <a class="blue-text" href="?page={{ comments.next_page_number }}">
+                                                    <i class="material-icons"></i>next</a>
+                                                {% endif %}
+                                            </span>
+                                            <li class="waves-effect">
+                                    </div>
+                                    </ul>
+                                </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+                <!-- Footer -->
+                <footer class="section blue darken-2 white-text center">
+                    <p>Madmin Panel Copyright &copy; 2018</p>
+                </footer>
+                <!-- Fixed Action Button -->
+                <div class="fixed-action-btn">
+                    <a class="btn-floating btn-large red">
+                        <i class="material-icons">add</i>
+                    </a>
+                    <ul>
+                        <li>
+                            <a href="#user-modal" class="modal-trigger btn-floating blue">
+                                <i class="material-icons">create</i>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+                <div id="user-modal" class="modal">
+                    <div class="modal-content">
+                        <h4>Add Comment</h4>
+                        <form method="POST">{% csrf_token %}
+                            <div class="input-field">
+                                <input type="text" id="comment" name="comment" />
+                                <label for="comment">Comment</label>
+                            </div>
+                            <input type="submit" value="Submit" class="btn btn-large btn-extended grey lighten-4 black-text" />
+                        </form>
+                    </div>
+                </div>
+                <!-- Preloader -->
+                <div class="loader preloader-wrapper big active">
+                    <div class="spinner-layer spinner-blue-only">
+                        <div class="circle-clipper left">
+                            <div class="circle"></div>
+                        </div>
+                        <div class="gap-patch">
+                            <div class="circle"></div>
+                        </div>
+                        <div class="circle-clipper right">
+                            <div class="circle"></div>
+                        </div>
+                    </div>
+                </div>
+                <!--Import jQuery before materialize.js-->
+                <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+                <script type="text/javascript" src="{% static 'js/materialize.min.js' %}"></script>
+                <script>
+                // Hide Sections
+                $('.section').hide();
 
-  <!-- Footer -->
-  <footer class="section blue darken-2 white-text center">
-    <p>Madmin Panel Copyright &copy; 2018</p>
-  </footer>
+                // Init Modal
+                $(".modal").modal();
 
-  <!-- Preloader -->
-  <div class="loader preloader-wrapper big active">
-    <div class="spinner-layer spinner-blue-only">
-      <div class="circle-clipper left">
-        <div class="circle"></div>
-      </div>
-      <div class="gap-patch">
-        <div class="circle"></div>
-      </div>
-      <div class="circle-clipper right">
-        <div class="circle"></div>
-      </div>
-    </div>
-  </div>
+                setTimeout(function() {
+                    $(document).ready(function() {
+                        // Show sections
+                        $('.section').fadeIn();
 
-  <!--Import jQuery before materialize.js-->
-<script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-  <script type="text/javascript" src="{% static 'js/materialize.min.js' %}"></script>
+                        // Hide preloader
+                        $('.loader').fadeOut();
 
-  <script>
-    // Hide Sections
-    $('.section').hide();
+                        //Init Side nav
+                        $('.button-collapse').sideNav();
 
-    setTimeout(function () {
-      $(document).ready(function () {
-        // Show sections
-        $('.section').fadeIn();
+                        // Init Modal
+                        $('.modal').modal();
 
-        // Hide preloader
-        $('.loader').fadeOut();
-
-        //Init Side nav
-        $('.button-collapse').sideNav();
-
-        // Init Modal
-        $('.modal').modal();
-
-      });
-    }, 1000);
-  </script>
+                    });
+                }, 1000);
+                </script>
 </body>
 
 </html>
